# opendan-desktop

./: .gitignore  README.md
src/: Cargo.toml
src/boot_web/: index.css  index.html  index.js
src/paios_booter/: Cargo.toml  booter.rc  build.rs
src/paios_booter/src/: api.rs  long_cmd.rs  main.rs
src/paios_booter/src/api/: def.rs  download.rs  handler.rs  install.rs  mod.rs
src_js/: README.md  package.json  prettier.config.js  tailwind.config.js  tsconfig.json  webpack.config.js  webpack.config.prod.js
src_js/src/: common.css  global.css  index.html  main.tsx  router.tsx  routes.tsx
src_js/src/layout/: Layout.tsx
src_js/src/pages/check/: Check.tsx
src_js/src/pages/index/: Index.tsx
src_js/src/pages/installed/: Installed.tsx
src_js/src/pages/installing/: InstallSuccess.tsx  Installing.tsx
src_js/src/services/: index.ts
src_js/src/types/: interface.d.ts
