[package]
name = "paios_booter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "*"
tide = "*"
tide-serve-dir-macro = "*"
serde = "*"
serde_json = "*"
tray-item = "*"

[build-dependencies]
windres = "*"